Update before public availability

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,3 +15,20 @@ updates:
   rebase-strategy: disabled
   registries:
     - github
+- package-ecosystem: github-actions
+  directory: "/"
+  schedule:
+    interval: daily
+    timezone: Europe/London
+  open-pull-requests-limit: 10
+  rebase-strategy: disabled
+  registries:
+    - github
+# Disable go dependabot update to keep it fixed
+#- package-ecosystem: docker
+#  directory: "/"
+#  schedule:
+#    interval: daily
+#    timezone: Europe/London
+#  open-pull-requests-limit: 10
+#  rebase-strategy: disabled
