--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,6 +2,7 @@ name: GitHub Release
 
 env:
   go_version: "1.18"
+  python_version: "3.10"
 
 on:
   workflow_dispatch:
@@ -30,8 +31,6 @@ jobs:
     name: Carry out a release
     runs-on: ubuntu-latest
     needs: [ check-for-changes ]
-    env:
-      GOPRIVATE: github.com/Arm-Debug
     if: needs.check-for-changes.outputs.changes
     steps:
       - uses: actions/checkout@v2
@@ -39,10 +38,13 @@ jobs:
           # Get the full history as this is required by goreleaser
           fetch-depth: 0
       - name: Set up Go
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v3
         with:
           go-version: ${{ env.go_version }}
-      - uses: actions/setup-python@v2
+      - name: Setup python
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ env.python_version }}
       - uses: FranzDiebold/github-env-vars-action@v2
       - name: Install CI/CD tools
         run: pip install continuous-delivery-scripts>=2.7 && pip list
