--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -29,9 +29,9 @@ linters:
 
 linters-settings:
   goimports:
-    local-prefixes: github.com/Arm-Debug
+    local-prefixes: github.com/ARM-software
   gci:
     sections:
       - Standard
       - Default
-      - Prefix(github.com/Arm-Debug)
+      - Prefix(github.com/ARM-software)
