--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -24,11 +24,10 @@ updates:
   rebase-strategy: disabled
   registries:
     - github
-# Disable go dependabot update to keep it fixed
-#- package-ecosystem: docker
-#  directory: "/"
-#  schedule:
-#    interval: daily
-#    timezone: Europe/London
-#  open-pull-requests-limit: 10
-#  rebase-strategy: disabled
+- package-ecosystem: docker
+  directory: "/"
+  schedule:
+    interval: daily
+    timezone: Europe/London
+  open-pull-requests-limit: 10
+  rebase-strategy: disabled
