:bug: `[job]` fix bug with job message browsing

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,7 +11,19 @@ repos:
     types: [go]
     pass_filenames: false
 
-#- repo: https://github.com/ARMmbed/continuous-delivery-scripts.git
-#  rev: 2.5.0
-#  hooks:
-#  - id: licensing
+- repo: https://github.com/Yelp/detect-secrets
+  rev: v1.0.3
+  hooks:
+  - id: detect-secrets
+    args: ['--baseline', '.secrets.baseline','--exclude-files "".*go\.sum$"']
+
+
+- repo: https://github.com/golangci/misspell
+  rev: v0.6.0
+  hooks:
+    - id: misspell
+
+- repo: https://github.com/ARMmbed/continuous-delivery-scripts.git
+  rev: 2.5.0
+  hooks:
+  - id: licensing
