--- a/.golangci.yaml
+++ b/.golangci.yaml
@@ -23,6 +23,7 @@ linters:
     - revive
     - gocritic
     - unconvert
+    - misspell
 
 linters-settings:
   goimports:
@@ -32,3 +33,19 @@ linters-settings:
       - Standard
       - Default
       - Prefix(github.com/ARM-software)
+  revive:
+    rules:
+      - name: exported
+        severity: warning
+        disabled: false
+        arguments:
+          - "disableStutteringCheck"
+  misspell:
+    locale: UK
+    extra-words:
+      - typo: "sanetisation"
+        correction: "sanitisation"
+      - typo: "sanetise"
+        correction: "sanitise"
+      - typo: "sanetising"
+        correction: "sanitising"
