--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -27,6 +27,8 @@ changelog:
       - '^docs:'
       - '^changes:'
       - '^test:'
+sboms:
+  - artifacts: source
 release:
   discussion_category_name: Releases
   # If the version tag looks like a pre-release e.g. beta then the GitHub release is set to prerelease
