--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -1,3 +1,4 @@
+version: 2
 env:
   - GO111MODULE=on
 # Commented out because requires Pro features
@@ -19,7 +20,7 @@ archives:
 checksum:
   name_template: 'checksums.txt'
 snapshot:
-  name_template: "{{ incpatch .Tag }}-dev"
+  version_template: "{{ incpatch .Tag }}-dev"
 changelog:
   sort: asc
   filters:
